Fixed spinner display and some spacing

--- a/src/styles/NominationsList.css
+++ b/src/styles/NominationsList.css
@@ -7,7 +7,7 @@
 }
 
 .NominationsList_heading {
-    margin-top: 50px;
+    margin-top: 10px;
     margin-bottom: 0px;
 }
 .NominationsList_p {
